--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,10 @@
  *= require_self
  */
 
-h1,h2,h3 {
-    font-family: 'Open Sans', sans-serif;
-}
+ @import 'bootstrap-sprockets';
+ @import 'bootstrap';
+ 
+ 
+h1, h2, h3 {
+     font-family:'Open Sans', sans-serif;
+ }
