--- a/saasapp/app/views/layouts/application.html.erb
+++ b/saasapp/app/views/layouts/application.html.erb
@@ -3,12 +3,15 @@
   <head>
     <title>Saasapp</title>
     <%= csrf_meta_tags %>
+ 
     <link href="//fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
