Moving untracked file

--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -48,6 +48,12 @@ h1, h2, h3 {
   color: white;
   opacity: 0.75;
   }
+
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
   
 }
 // Home Page Styles
